--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version = "0.11.3", features = ["json"] }
 tokio = { version = "1.5.0", features = ["full"] }
+hyper = { version = "0.14", features = ["full"] }
 
 [dev-dependencies]
 httptest = "0.15.2"
