--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ serde_json = "1.0"
 reqwest = { version = "0.11.3", features = ["json"] }
 tokio = { version = "1.5.0", features = ["full"] }
 hyper = { version = "0.14", features = ["full"] }
+prometheus = "0.12"
+opentelemetry-prometheus = "0.7.0"
 
 [dev-dependencies]
 httptest = "0.15.2"
