--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ tokio = { version = "1.5.0", features = ["full"] }
 hyper = { version = "0.14", features = ["full"] }
 prometheus = "0.12"
 opentelemetry-prometheus = "0.7.0"
+clap = "3.0.0-beta.2"
+config = "0.11"
 
 [dev-dependencies]
 httptest = "0.15.2"
