--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 clap = "3.0.0-beta.2"
 config = "0.11"
 hyper = { version = "0.14", features = ["full"] }
-opentelemetry = { version = "0.15", features = ["rt-tokio"] }
+opentelemetry = { version = "0.15", features = ["rt-tokio", "metrics", "trace"] }
 opentelemetry-prometheus = "0.7.0"
 prometheus = "0.12"
 reqwest = { version = "0.11.3", features = ["json"] }
